test_files/invalid/029-var-as-identifier.man
def main()
    a = var + 2
end
